# ayon-backend

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  aycli  dbshell  dump_project.py  mypy.ini  pyproject.toml  reload.sh  restore_project.py  run.sh  setup.cfg  start.sh  test_dump.py  test_entity_update.py  test_external_login.py  test_invite.py  test_links_getter.py  test_migrate_settings.py  wait-for-db.py
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deployment.yml
addons/applications/: __init__.py
addons/ftrack/: __init__.py
addons/test/: __init__.py
api/access/: __init__.py  access_groups.py  project_access.py  router.py  utils.py
api/access_groups/: __init__.py  access_groups.py
api/actions/: __init__.py  actions.py  listing.py  router.py
api/activities/: __init__.py  activity.py  activity_categories.py  reactions.py  router.py  suggest.py  watchers.py
api/activity/: activity.py  router.py
api/addons/: __init__.py  common.py  configuration.py  delete_addon.py  install.py  list_addons.py  project_settings.py  router.py  site_settings.py  studio_settings.py
api/anatomy/: __init__.py  anatomy.py  folder_types.py  roots.py  templates.py
api/attributes/: __init__.py  attributes.py  models.py  validator.py
api/auth/: __init__.py  auth.py  initialize.py  router.py  sessions.py  user_pools.py
api/bundles/: __init__.py  actions.py  bundles.py  check_bundle.py  migration.py  models.py  router.py
api/config/: __init__.py  config.py  files.py  router.py
api/connect/: __init__.py  connect.py  feedback.py
api/crud_folders/: __init__.py  folders.py
api/crud_projects/: __init__.py  anatomy.py  deploy.py  list_projects.py  projects.py  router.py  settings.py
api/crud_representations/: __init__.py  representations.py
api/crud_subsets/: __init__.py  subsets.py
api/crud_tasks/: __init__.py  tasks.py
api/crud_versions/: __init__.py  versions.py
api/data_import/: __init__.py  common.py  export_data.py  import_data.py  models.py  router.py
api/dependencies/: __init__.py  dependencies.py
api/desktop/: __init__.py  bundles.py  common.py  deps.py  installers.py  router.py
api/edit/: __init__.py  edit.py
api/entity_lists/: __init__.py  attributes.py  entities.py  entity_list_attributes.py  entity_list_entities.py  entity_list_folders.py  entity_list_items.py  entity_list_order.py  entity_lists.py  list_items.py  lists.py  router.py
api/enums/: __init__.py
api/events/: __init__.py  enroll.py  events.py  operations.py  router.py
api/files/: __init__.py  common.py  files.py  preview.py  router.py  video.py
api/folders/: __init__.py  folder.py  folders.py  list_folders.py  router.py  search.py
api/grouping/: __init__.py  grouping.py  router.py
api/hierarchy/: __init__.py  hierarchy.py  solver.py
api/hosts/: __init__.py  hosts.py
api/inbox/: __init__.py  inbox.py  router.py
api/info/: __init__.py
api/links/: __init__.py  links.py
api/lists/: README.md  __init__.py  init.py  list_items.py  lists.py  router.py
api/market/: __init__.py  addons.py  common.py  licenses.py  market.py  models.py  releases.py  router.py
api/marketplace/: __init__.py  common.py  marketplace.py  router.py
api/metrics/: __init__.py
api/oauth/: __init__.py  oauth_provider.py  router.py  utils.py
api/onboarding/: __init__.py  initialize.py  onboarding.py  release.py  router.py  setup.py
api/operations/: __init__.py  activities_operations.py  activitities_operations.py  common.py  operations.py  router.py
api/products/: __init__.py  products.py
api/project_dashboard/: __init__.py  dashboard.py  router.py
api/project_folders/: __init__.py  project_folders.py  router.py
api/projects/: __init__.py  anatomy.py  bundle.py  deploy.py  external_users.py  guests.py  list_projects.py  product_types.py  project.py  project_folders.py  projects.py  roots.py  router.py  settings.py  tags.py  users.py
api/query/: __init__.py  query.py
api/representations/: __init__.py  contextfilter.py  representations.py  router.py
api/resolve/: __init__.py  models.py  templating.py
api/review/: __init__.py  common.py  listing.py  patching.py  review.py  router.py  sorting.py  upload.py  utils.py  video.py
api/roles/: __init__.py  roles.py
api/secrets/: __init__.py  secrets.py
api/services/: __init__.py  hosts.py  router.py  services.py
api/sessions/: __init__.py  sessions.py
api/settings/: __init__.py  attributes.py  legacy_settings.py  models.py  router.py  settings.py  settings_addons_list.py  system.py
api/sitesync/: __init__.py  models.py  sitesync.py
api/subsets/: __init__.py  router.py  subset.py  subsets.py
api/system/: __init__.py  dbimport.py  frontend_modules.py  info.py  metrics.py  router.py  (+2 more)
ayon_server/: __init__.py  __main__.py  background.py  cli.py  config.py  constraints.py  events.py  exceptions.py  extensions.py  info.py  initialize.py  logging.py  logs.py  secrets.py  sqlfilter.py  types.py  utils.py  version.py
demogen/: __main__.py  demogen.py  generators.py  namegen.py
docs/: addon-routing.md
examples/: oauth_client_credentials_example.py
linker/: __main__.py  common.py  linker.py  query.py
maintenance/: __main__.py  maintenance.py  maintenance_task.py  scheduler.py
nxtools/: __init__.py  file_utils.py  logging.py  string_utils.py
openpype/: __init__.py  __main__.py  background.py  config.py  events.py  exceptions.py  hierarchy.py  logs.py  thumbnail.py  types.py  utils.py
schemas/: schema.drop.sql  schema.project.sql  schema.public.sql  schema.public.update.sql
setup/: __main__.py  access_groups.py  attributes.py  database.py  initial_bundle.py  roles.py  settings.py  template.py  users.py
static/: graphiql.html
tests/: common.py  copy_addon_variant_test.py  link_permissions_test.py  operations_logging_test.py  resolve_latest_approved_test.py  staging_actions_test.py  test_ayon_server_utils.py  test_versions.py
transcoder/: __main__.py  ffmpeg.py
(+525 files in other folders)
