[project]
name = "ayon-server"
version = "1.14.1"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  "aiocache >=0.12.3",
  "aiofiles >=25.1.0",
  "aioshutil >=1.6",
  "asyncpg >=0.31.0",
  "boto3 >=1.35.22",
  "codenamize >=1.2.3",
  "cryptography >=46.0.5",
  "email-validator >=2.3.0",
  "fastapi ==0.125.0", # Higher versions require Pydantic v2
  "geoip2 >=5.2.0",
  "granian >=1.1.1",
  "gunicorn >=25.1.0",
  "httpx >=0.28.1",
  "jinja2>=3.1.6",
  "loguru>=0.7.3",
  "orjson >=3.11.7",
  "pillow >=12.1.1",
  "psutil >=7.2.2",
  "pydantic ==1.10.25", # 1.10.25 is the last 1.x version
  "pyjwt ==2.9.0", # Do not upgrade before migrating to string only subs
  "pyyaml >=6.0.3",
  "redis >=7.2.0",
  "rich >=14.3.2",
  "semver >=3.0.4",
  "shortuuid >=1.0.13",
  "strawberry-graphql[fastapi] >=0.294.0",
  "toml >=0.10.2",
  "typer >=0.24.0",
  "unidecode>=1.4.0",
  "user-agents >=2.2.0",
  "uvicorn[standard] >=0.41.0",
]

[dependency-groups]
dev = [
  "asyncpg-stubs >=0.29.1",
  "mypy >=1.19.1",
  "pre-commit >=2.20.0",
  "pytest >=7.0.0",
  "pytest-order >=1.0.1",
  "ruff >=0.6.9",
  "types-aiofiles >=23.2.0.20240403",
  "types-psutil >=5.9.5.20240516",
  "types-pyyaml >=6.0.12.20240311",
  "types-toml >=0.10.8",
  "types-boto3 >=1.0.2",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ISC001", # incompatible with formatting
    "E721",  # do not compare types, i'll fix this later :)
    "C901",  # too complex. C'mon - this is a complex project
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

check_untyped_defs = true
disallow_any_generics = true
exclude = "tests/|venv/|tool/|test_"
explicit_package_bases = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# follow_imports = "silent"
# strict = true
# disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "user_agents",
  "tomllib",
  "codenamize",
  "aiocache"
]
ignore_missing_imports = true
